@@ -3,11 +3,13 @@ ChangeLog for RQL
 
  --
     * fix as_string bugs
-
+    * fix a bug in stcheck to detect bad queries when aggregat/transform 
+      functions are used
+	
 2006-09-05  --  0.7.0
     * new method on variable to get the name of relations where it's used
     * new function into utils to register known registered procedures
-	* fixed grammar to allow "_" into function name
+    * fixed grammar to allow "_" into function name
 
 2006-06-08  -- 0.6.0
     * new add method on statement
